--- a/tests/simple-frontend/chat.html
+++ b/tests/simple-frontend/chat.html
@@ -17,8 +17,21 @@
     <button type="submit" id="disconnect-btn">Disconnect</button>
     <button type="submit" id="clear-btn">Clear</button>
     <div style="display: flex">
-        <div id="public-announcement-box" style="width: 300px; min-height: 500px; border-color: green; border-style: solid; margin: 10px"></div>
-        <div id="private-announcement-box" style="width: 300px; min-height: 500px; border-color: green; border-style: solid;margin: 10px"></div>
+        <div id="public-announcement-box"
+             style="width: 300px; min-height: 500px; border-color: green; border-style: solid; margin: 10px"></div>
+        <div id="private-announcement-box"
+             style="width: 300px; min-height: 500px; border-color: green; border-style: solid;margin: 10px"></div>
+    </div>
+    <div style="display: flex">
+        <div id="conversation-list"
+             style="width: 200px; min-height: 500px; border-color: green; border-style: solid;margin: 10px"></div>
+        <div id="conversation-content"
+             style="width: 600px; min-height: 500px; border-color: green; border-style: solid;margin: 10px; overflow-wrap: break-word; overflow-y: scroll"></div>
+    </div>
+    <div>
+        <textarea type="text" name="chat-content" id="chat-content"
+                  style="width: 400px; height: 50px; resize: none"></textarea>
+        <button id="send-button" type="submit">Send</button>
     </div>
 </div>
 </body>
