--- a/tests/simple-frontend/chat.html
+++ b/tests/simple-frontend/chat.html
@@ -26,7 +26,7 @@
         <div id="conversation-list"
              style="width: 200px; min-height: 500px; border-color: green; border-style: solid;margin: 10px"></div>
         <div id="conversation-content"
-             style="width: 600px; min-height: 500px; border-color: green; border-style: solid;margin: 10px; overflow-wrap: break-word; overflow-y: scroll"></div>
+             style="width: 600px; min-height: 500px; border-color: green; border-style: solid;margin: 10px; overflow-wrap: break-word"></div>
     </div>
     <div>
         <textarea type="text" name="chat-content" id="chat-content"
