in-progress: avatar

--- a/tests/simple-frontend/chat.html
+++ b/tests/simple-frontend/chat.html
@@ -16,6 +16,9 @@
 <div id="chat-interface" hidden>
     <button type="submit" id="disconnect-btn">Disconnect</button>
     <button type="submit" id="clear-btn">Clear</button>
+    <div id="profile">
+
+    </div>
     <div style="display: flex">
         <div id="public-announcement-box"
              style="width: 300px; min-height: 500px; border-color: green; border-style: solid; margin: 10px"></div>
