in-progress: NotificationService

--- a/tests/simple-frontend/chat.html
+++ b/tests/simple-frontend/chat.html
@@ -16,7 +16,7 @@
 <div id="chat-interface" hidden>
     <button type="submit" id="disconnect-btn">Disconnect</button>
     <button type="submit" id="clear-btn">Clear</button>
-    <div id="profile">
+    <div id="profile" style="display: flex">
 
     </div>
     <div style="display: flex">
